# Embedded-Training

Embedded Training/: FPGA.md  Glossary.md  Interrupts.md  (+4 more)
Embedded Training/PI PICO/oled/: CMakeLists.txt  oled.c
Embedded Training/PI PICO/servo motor/: CMakeLists.txt  servo.c
Embedded Training/PI PICO/servo motor/.build/: CMakeCache.txt  Makefile  cmake_install.cmake  servo.dis  servo.elf  servo.elf.map  servo.hex  servo.uf2
Embedded Training/PI PICO/servo motor/.build/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/docs/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/common/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/common/pico_base/: Makefile
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
Embedded Training/PI PICO/servo motor/.build/pico-sdk/tools/: Makefile
(+155 files in other folders)
